--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,7 @@ title:                 Sansonyeo's Blog # Starter Kit JYYUN modify
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Hydejack is a boutique Jekyll theme for hackers, nerds, and academics,
-  with a focus on personal sites that are meant to impress.
+  I am a mountain girl who likes Mt. Seorak and Mt. Jiri.
 
 # A shorter description for the sidebar.
 tagline:               # Change `tagline` in `_config.yml` JYYUN modify
@@ -47,14 +46,20 @@ author:
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
+# JYYun Modify
 # Add links to the sidebar.
+# menu:
+#   - title:             Example
+#     url:               /example/
+#   - title:             Documentation
+#     url:               /docs/
+#   - title:             About
+#     url:               /about/
 menu:
-  - title:             Example
-    url:               /example/
-  - title:             Documentation
-    url:               /docs/
-  - title:             About
-    url:               /about/
+  - title:             Mountain
+    url:               /mountain/
+  - title:             산악도서
+    url:               /books/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -351,8 +356,8 @@ plugins:
 #   yandex:              <verification-id>
 
 # Used for twitter cards
-# twitter:
-#   username:            <username>
+ twitter:
+   username:            whitedove95
 
 # Used for facebook open graph
 # facebook:
@@ -360,12 +365,13 @@ plugins:
 #   publisher:           <id>
 #   admins:              <id>
 
+# JYYun Modify
 # Used on index and about sites
-# social:
-#   name:                <firstname> <lastname>
-#   links:
-#     - https://twitter.com/<username>
-#     - https://github.com/<username>
+ social:
+   name:                <Jinyoung> <YUN>
+   links:
+     - https://twitter.com/whitedove95
+     - https://github.com/sansonyeo
 
 
 # Plugin Configs
