--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
-lang:                  ko-KR # en JYYUN modify
+lang:                  ko-kr
 
 # The title of your blog. Used in the sidebar and the browser tab.
 title:                 Sansonyeo's Blog # Starter Kit JYYUN modify
@@ -25,7 +25,7 @@ title:                 Sansonyeo's Blog # Starter Kit JYYUN modify
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  I am a mountain girl who likes Mt. Seorak and Mt. Jiri.
+  I am a mountain girl who likes Mt.Seorak and Mt.Jiri.
 
 # A shorter description for the sidebar.
 tagline:               # Change `tagline` in `_config.yml` JYYUN modify
