--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ url:                   https://sansonyeo.github.io
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
-lang: en-us
+lang: ko-KR
 
 # The title of your blog. Used in the sidebar and the browser tab.
 title:                 Sansonyeo's Blog # Starter Kit JYYUN modify
