--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
-lang: ko-KR
+lang:                  en
 
 # The title of your blog. Used in the sidebar and the browser tab.
 title:                 Sansonyeo's Blog # Starter Kit JYYUN modify
@@ -48,18 +48,18 @@ author:
 
 # JYYun Modify
 # Add links to the sidebar.
-# menu:
-#   - title:             Example
-#     url:               /example/
-#   - title:             Documentation
-#     url:               /docs/
-#   - title:             About
-#     url:               /about/
 menu:
-  - title:             Mountain
-    url:               /mountain/
-  - title:             산악도서
-    url:               /books/
+  - title:             Example
+    url:               /example/
+  - title:             Documentation
+    url:               /docs/
+  - title:             About
+    url:               /about/
+# menu:
+#  - title:             Mountain
+#    url:               /mountain/
+#  - title:             산악도서
+#    url:               /books/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
