--- a/_config.yml
+++ b/_config.yml
@@ -48,12 +48,17 @@ author:
 
 # Add links to the sidebar.
 menu:
-  - title:             Example
-    url:               /example/
-  - title:             Documentation
-    url:               /docs/
-  - title:             About
-    url:               /about/
+  - title:             Mountain
+    url:               /mountain/
+  - title:             Books
+    url:               /books/
+#menu:
+#  - title:             Example
+#    url:               /example/
+#  - title:             Documentation
+#    url:               /docs/
+#  - title:             About
+#    url:               /about/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
