--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,12 @@
 lang:                  ko-KR
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Sansonyeo's Blog
+title:                 Mountain History
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
-description:           >
-  I am a mountain girl who likes Mt.Seorak and Mt.Jiri.
+#description:           >
+#  I am a mountain girl who likes Mt.Seorak and Mt.Jiri.
 
 # A shorter description for the sidebar.
 tagline:               # Change `tagline` in `_config.yml`
@@ -62,13 +62,13 @@ menu:
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
-legal:
-  - title:             LICENSE
-    url:               /LICENSE/
-  - title:             NOTICE
-    url:               /NOTICE/
-  - title:             CHANGELOG
-    url:               /CHANGELOG/
+#legal:
+#  - title:             LICENSE
+#    url:               /LICENSE/
+#  - title:             NOTICE
+#    url:               /NOTICE/
+#  - title:             CHANGELOG
+#    url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
 copyright:             © 2024. All rights reserved.
