--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 lang:                  ko-KR
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Mountain History
+title:                 등산은 자기과시가 아니며, 대가를 요구하지 않는 인간의 의식과 행동이며, 자연에 대한 가장 순수하고 가장 가혹하며 가장 신중한 도전이다. - 리오넬 테레이
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
