--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,12 @@
 lang:                  ko-KR
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 등산은 자기과시가 아니며, 대가를 요구하지 않는 인간의 의식과 행동이며, 자연에 대한 가장 순수하고 가장 가혹하며 가장 신중한 도전이다. - 리오넬 테레이
+title:                 아마도, 산 이야기
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
-#description:           >
-#  I am a mountain girl who likes Mt.Seorak and Mt.Jiri.
+description:           >
+  등산은 자기과시가 아니며, 대가를 요구하지 않는 인간의 의식과 행동이며, 자연에 대한 가장 순수하고 가장 가혹하며 가장 신중한 도전이다. - 리오넬 테레이
 
 # A shorter description for the sidebar.
 tagline:               # Change `tagline` in `_config.yml`
