--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,8 @@ menu:
     url:               /story/
   - title:             Books
     url:               /books/
+  - title:             Whitespider
+    url:               /whitespider/
 #  - title:             Documentation
 #    url:               /docs/
 #menu:
