--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ menu:
   - title:             Books
     url:               /books/
   - title:             하얀거미
-    url:               /하얀거미/
+    url:               /whitespider/
 #  - title:             Documentation
 #    url:               /docs/
 #menu:
